# link-board

./: .env.example  .gitignore  Cargo.toml  LICENSE  README  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
link-board/: .gitignore  Cargo.toml
link-board-esp-idf/: Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
link-board-esp-idf/.cargo/: config.toml
link-board-esp-idf/src/: data_retriever.rs  main.rs  spi_adapter.rs  wifi.rs
link-board/src/: constants.rs  data_parser.rs  data_retriever.rs  display.rs  env.rs  error.rs  led.rs  lib.rs  main.rs  spi_adapter.rs  train.rs  trips_for_route_types.rs
link-board/src/display/: map_display.rs  string_display.rs  strip_display.rs
src/: constants.rs  data_parser.rs  data_retriever.rs  display.rs  env.rs  error.rs  led.rs  led_adapter.rs  link_board_display.rs  main.rs  spi_adapter.rs  stop.rs  string_display.rs  strip_display.rs  test_data.rs  train.rs  trips_for_route.rs  trips_for_route_types.rs
src/display/: map_display.rs  string_display.rs  strip_display.rs
