[package]
name = "link-board-esp-idf"
version = "0.1.0"
authors = ["Aaron Stolarz <aaronstolarz@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "link-board-esp-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
link-board = { version = "0.0.1", path = "../link-board", default-features = false }
log = "0.4"

[build-dependencies]
embuild = "0.33"
