[package]
name = "link-board-esp-idf"
version = "0.1.0"
authors = ["Aaron Stolarz <aaronstolarz@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "link-board-esp-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

experimental = ["esp-idf-svc/experimental"]

[features]
default = ["esp32s3", "spi"]
esp32 = []
esp32s3 = []
spi = ["dep:ws2812-spi"]
rmt = ["dep:ws2812-esp32-rmt-driver"]

[dependencies]
anyhow = "1.0.95"
dotenvy_macro = "0.15.7"
embedded-svc = "0.28.1"
esp-idf-hal = "0.45.2"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
link-board = { version = "0.0.1", path = "../link-board", default-features = false, features = ["esp32"] }
log = "0.4"
smart-leds = "0.4.0"
smol = "2.0.2"
ws2812-esp32-rmt-driver = { git = "https://github.com/cat-in-136/ws2812-esp32-rmt-driver", features = ["smart-leds-trait"], optional = true }
ws2812-spi = { version = "0.5.0", features = ["mosi_idle_high"], optional = true }

[build-dependencies]
embuild = "0.33"
