[package]
name = "link-board"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["native", "rpi"]
native = ["dep:openssl", "dep:reqwest", "dep:simple_logger", "tokio/signal"]
rpi = ["dep:ws2818-rgb-led-spi-driver"]

[dependencies]
cfg-if = "1.0.0"
colored = "2.1.0"
dotenvy_macro = { version = "0.15.7" }
futures = "0.3.31"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_info"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.12.7", optional = true }
serde_json = "1.0.128"
simple_logger = { version = "5.0.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml-cfg = "0.2.0"
ws2818-rgb-led-spi-driver = { version = "2.0.0", optional = true }
